tests/typeck/valid/traits.vit
space tests/typeck/valid/traits

form Point {
  x: int
}

trait Show {
  proc show(self: Self) -> string;
}

impl Show for Point {
  proc show(self: Self) -> string {
    give "point";
  }
}

proc main() -> int {
  let point = Point { x: 1 };
  let text: string = point.show();
  give 0;
}
