tests/typeck/invalid/unknown_member.vit
space tests/typeck/invalid/unknown_member

form Point {
  x: int
}

proc main() -> int {
  let point = Point { x: 1 };
  give point.y;
}
